--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,8 +53,53 @@ a {
     font-size: 1.2rem;
 }
 
+a:hover {
+    color: aqua;
+}
+
+.active {
+    color: #ffdd51;
+}
+
 .links {
     list-style-type: none;
     display: flex;
 }
+
+.books {
+    margin: 0 2rem 0 2rem;
+    display: flex;
+}
+
+.book_item {
+    margin: 2rem;
+}
+
+.book {
+    width: 270px;
+    height: 470px;
+    box-shadow: 5px 5px 5px 5px #484444;
+    text-align: center;
+}
+
+.book img {
+    width: 70%;
+    height: 70%;
+    object-fit: contain;
+}
+
+.book h1, .book h3, .book p {
+    margin: 5px;
+}
+
+.btn {
+    margin: 0.5rem;
+    font-family: inherit;
+    background-color: #696bea;
+    height: 2rem;
+    width: 90%;
+    border-radius: 5px;
+    color: white;
+}
+
 
