Added admin folder for views

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -19,7 +19,7 @@
                 <a class="<%=path === '/add-book' ? 'active' : ''%>" href="/admin/add-book">Add book</a>
             </li>
             <li>
-                <a class="<%=path === '/admin' ? 'active' : ''%>" href="/admin/books">Admin books</a>
+                <a class="<%=path === '/admin/books' ? 'active' : ''%>" href="/admin/books">Admin books</a>
             </li>
         </ul>
         <ul class="auth_navigation">
