--- a/views/admin/admin-books.ejs
+++ b/views/admin/admin-books.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/head') %>
+<link rel="stylesheet" href="/css/main.css">
 <%- include('../includes/navigation') %>
 <div class="books">
     <% for (const book of books) { %>
