--- a/views/admin/add-book.ejs
+++ b/views/admin/add-book.ejs
@@ -7,19 +7,19 @@
     <form class="form" action="/admin/add-book" method="post">
         <div>
             <label for="title">Title</label>
-            <input type="text" id="title">
+            <input type="text" id="title" name="title">
         </div>
         <div>
             <label for="author">Author</label>
-            <input type="text" id="author">
+            <input type="text" id="author" name="author">
         </div>
         <div>
             <label for="imageUrl">Image URL</label>
-            <input type="text" id="imageUrl">
+            <input type="text" id="imageUrl" name="imageUrl">
         </div>
         <div>
             <label for="description">Description</label>
-            <input type="text" id="description">
+            <input type="text" id="description" name="description">
         </div>
         <button class="btn" type="submit">Add book</button>
     </form>
