Choose image from your computer

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -18,7 +18,7 @@
                 <a class="<%=path === '/reserved' ? 'active' : ''%>" href="/reserved">Reserved books</a>
             </li>
             <li>
-                <a class="<%=path === '/add-book' ? 'active' : ''%>" href="/admin/add-book">Add book</a>
+                <a class="<%=path === '/admin/add-book' ? 'active' : ''%>" href="/admin/add-book">Add book</a>
             </li>
             <li>
                 <a class="<%=path === '/admin/books' ? 'active' : ''%>" href="/admin/books">Admin books</a>
