--- a/views/admin/add-book.ejs
+++ b/views/admin/add-book.ejs
@@ -4,7 +4,7 @@
 <%- include('../includes/navigation') %>
 <div class="add_book">
     <h1>Add new book</h1>
-    <form class="form" action="/admin/add-book" method="post">
+    <form class="form" action="/admin/add-book" method="post" enctype="multipart/form-data">
         <div>
             <label for="title">Title</label>
             <input type="text" id="title" name="title">
@@ -14,12 +14,12 @@
             <input type="text" id="author" name="author">
         </div>
         <div>
-            <label for="imageUrl">Image URL</label>
-            <input type="text" id="imageUrl" name="imageUrl">
-        </div>
-        <div>
             <label for="description">Description</label>
             <input type="text" id="description" name="description">
+        </div>
+        <div>
+            <label for="imageUrl">Image</label>
+            <input class="file_input" type="file" id="imageUrl" name="imageUrl">
         </div>
         <button class="btn" type="submit">Add book</button>
     </form>
