--- a/views/admin/admin-books.ejs
+++ b/views/admin/admin-books.ejs
@@ -7,7 +7,7 @@
             <div class="book">
                 <h1><%= book.title %></h1>
                 <h3><%= book.author %></h3>
-                <img src="<%= book.imageUrl %>" alt="A book">
+                <img src="/<%= book.imageUrl %>" alt="A book">
                 <p><%= book.description %></p>
                 <form action="/admin/delete-book" method="post">
                     <input type="hidden" value="<%= book._id %>" name="bookId">
