--- a/views/admin/add-book.ejs
+++ b/views/admin/add-book.ejs
@@ -2,20 +2,23 @@
 <link rel="stylesheet" href="/css/main.css">
 <link rel="stylesheet" href="/css/form.css">
 <%- include('../includes/navigation') %>
+<div style="display: <%= errors ? "flex" : "none" %>" id="flash">
+    <p><%= errors %></p>
+</div>
 <div class="add_book">
     <h1>Add new book</h1>
     <form class="form" action="/admin/add-book" method="post" enctype="multipart/form-data">
         <div>
             <label for="title">Title</label>
-            <input type="text" id="title" name="title">
+            <input type="text" id="title" name="title" value="<%= title %>">
         </div>
         <div>
             <label for="author">Author</label>
-            <input type="text" id="author" name="author">
+            <input type="text" id="author" name="author" value="<%= author %>">
         </div>
         <div>
             <label for="description">Description</label>
-            <input type="text" id="description" name="description">
+            <input type="text" id="description" name="description" value="<%= description %>">
         </div>
         <div>
             <label for="imageUrl">Image</label>
