--- a/views/admin/add-book.ejs
+++ b/views/admin/add-book.ejs
@@ -21,6 +21,10 @@
             <input type="text" id="description" name="description" value="<%= description %>">
         </div>
         <div>
+            <label for="overview">Overview</label>
+            <textarea name="overview" id="overview" cols="30" rows="10"><%= overview %></textarea>
+        </div>
+        <div>
             <label for="imageUrl">Image</label>
             <input class="file_input" type="file" id="imageUrl" name="imageUrl">
         </div>
