--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -6,3 +6,4 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Library</title>
+    <link rel="icon" href="images/logo.png">
