--- a/views/admin/add-book.ejs
+++ b/views/admin/add-book.ejs
@@ -6,29 +6,32 @@
     <p><%= errors %></p>
 </div>
 <div class="add_book">
-    <h1>Add new book</h1>
-    <form class="form" action="/admin/add-book" method="post" enctype="multipart/form-data">
+    <h1><%= editing ? "Edit book" : "Add new book" %></h1>
+    <form class="form" action=<%= editing ? "/admin/edit-book" : "/admin/add-book" %> method="post" enctype="multipart/form-data">
         <div>
             <label for="title">Title</label>
-            <input type="text" id="title" name="title" value="<%= title %>">
+            <input type="text" id="title" name="title" value="<%= book.title %>">
         </div>
         <div>
             <label for="author">Author</label>
-            <input type="text" id="author" name="author" value="<%= author %>">
+            <input type="text" id="author" name="author" value="<%= book.author %>">
         </div>
         <div>
             <label for="description">Description</label>
-            <input type="text" id="description" name="description" value="<%= description %>">
+            <input type="text" id="description" name="description" value="<%= book.description %>">
         </div>
         <div>
             <label for="overview">Overview</label>
-            <textarea name="overview" id="overview" cols="30" rows="10"><%= overview %></textarea>
+            <textarea name="overview" id="overview" cols="30" rows="10"><%= book.overview %></textarea>
         </div>
         <div>
             <label for="imageUrl">Image</label>
             <input class="file_input" type="file" id="imageUrl" name="imageUrl">
         </div>
-        <button class="btn" type="submit">Add book</button>
+        <%if (editing) { %>
+            <input type="hidden" value="<%= book._id %>" name="bookId">
+        <% } %>
+        <button class="btn" type="submit"><%= editing ? "Edit book" : "Add book" %></button>
     </form>
 </div>
 <%- include('../includes/foot') %>
