--- a/views/admin/admin-books.ejs
+++ b/views/admin/admin-books.ejs
@@ -9,6 +9,7 @@
                 <h3><%= book.author %></h3>
                 <img src="/<%= book.imageUrl %>" alt="A book">
                 <p><%= book.description %></p>
+                <a href="/admin/edit-book/<%= book._id %>" class="btn">Edit</a>
                 <form action="/admin/delete-book" method="post">
                     <input type="hidden" value="<%= book._id %>" name="bookId">
                     <button class="btn" type="submit" style="background: red">Delete</button>
