--- a/views/includes/foot.ejs
+++ b/views/includes/foot.ejs
@@ -1,13 +1,13 @@
 <footer class="main_footer">
     <ul class="links">
         <li>
-            <a href="https://github.com/koksha19">GitHub</a>
+            <a class="link_item" href="https://github.com/koksha19">GitHub</a>
         </li>
         <li>
-            <a href="https://www.linkedin.com/in/levbereza/">LinkedIn</a>
+            <a class="link_item" href="https://www.linkedin.com/in/levbereza/">LinkedIn</a>
         </li>
         <li>
-            <a href="https://t.me/levbereza">Telegram</a>
+            <a class="link_item" href="https://t.me/levbereza">Telegram</a>
         </li>
     </ul>
 </footer>
