--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -10,15 +10,15 @@
     <form class="form_item" action="/signup" method="post" enctype="multipart/form-data">
         <div>
             <label for="email">EMail</label>
-            <input type="text" id="email" name="email">
+            <input type="text" id="email" name="email" value="<%= user.email %>">
         </div>
         <div>
             <label for="password">Password</label>
-            <input type="password" id="password" name="password">
+            <input type="password" id="password" name="password" value="<%= user.password %>">
         </div>
         <div>
-            <label for="re_password">Repeat password</label>
-            <input type="password" id="re_password" name="re_password" >
+            <label for="conf_password">Confirm password</label>
+            <input type="password" id="conf_password" name="conf_password" value="<%= user.conf_password %>">
         </div>
         <button class="btn" type="submit">Create account</button>
     </form>
