--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -6,19 +6,14 @@
     <p><%= errors %></p>
 </div>
 <div class="form">
-    <h1>Log in</h1>
-    <form class="form_item" action="/login" method="post" enctype="multipart/form-data">
+    <h1>Type your email</h1>
+    <form class="form_item" action="/reset-password" method="post">
         <div>
             <label for="email">EMail</label>
             <input type="text" id="email" name="email">
         </div>
-        <div>
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password">
-        </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-        <button class="btn" type="submit">Log in</button>
+        <button class="btn" type="submit">Send request to reset password</button>
     </form>
-    <a href="/reset-password">Forgot password</a>
 </div>
 <%- include('../includes/foot') %>
