--- a/views/500.ejs
+++ b/views/500.ejs
@@ -1,5 +1,5 @@
 <%- include('./includes/head') %>
 <link rel="stylesheet" href="/css/main.css">
 <%- include('./includes/navigation') %>
-<h1 style="justify-self: center">Server side error</h1>
+<h1 style="justify-self: center"><%= error %></h1>
 <%- include('./includes/foot') %>
