--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,8 +60,7 @@ body {
 .link_item:hover {
     color: aqua;
 }
-
-.active {
+.link_item.active {
     color: #ffdd51;
 }
 
@@ -70,8 +69,11 @@ body {
     display: flex;
 }
 
-.books {
+main{
     margin: 0 2rem 5rem 2rem;
+}
+
+.books {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -131,4 +133,22 @@ body {
     margin: 2rem;
     padding: 0.5rem;
     box-shadow: 5px 5px 5px 5px #656464;
+}
+
+.pagination {
+    padding-bottom: 2rem;
+    text-align: center;
+}
+
+.pagination a {
+    text-decoration: none;
+    padding: 0.5rem;
+    margin: 0 1rem;
+    border: 1px solid #696bea;
+}
+
+.pagination a:hover,
+.pagination a.active {
+    color: white;
+    background: #696bea;
 }
