--- a/views/admin/admin-books.ejs
+++ b/views/admin/admin-books.ejs
@@ -1,21 +1,28 @@
 <%- include('../includes/head') %>
 <link rel="stylesheet" href="/css/main.css">
 <%- include('../includes/navigation') %>
-<div class="books">
-    <% for (const book of books) { %>
-        <article class="book_item">
-            <div class="book">
-                <h1><%= book.title %></h1>
-                <h3><%= book.author %></h3>
-                <img src="/<%= book.imageUrl %>" alt="A book">
-                <p><%= book.description %></p>
-                <a href="/admin/edit-book/<%= book._id %>" class="btn">Edit</a>
-                <input type="hidden" value="<%= book._id %>" name="bookId">
-                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                <button class="btn" type="submit" style="background: red" onclick="deleteBook(this)">Delete</button>
-            </div>
-        </article>
-    <% } %>
-</div>
+<main>
+    <div class="books">
+        <% for (const book of books) { %>
+            <article class="book_item">
+                <div class="book">
+                    <h1><%= book.title %></h1>
+                    <h3><%= book.author %></h3>
+                    <img src="/<%= book.imageUrl %>" alt="A book">
+                    <p><%= book.description %></p>
+                    <a href="/admin/edit-book/<%= book._id %>" class="btn">Edit</a>
+                    <input type="hidden" value="<%= book._id %>" name="bookId">
+                    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                    <button class="btn" type="submit" style="background: red" onclick="deleteBook(this)">Delete</button>
+                </div>
+            </article>
+        <% } %>
+    </div>
+    <section class="pagination">
+        <a class="<%= page === "1" ? 'active' : '' %>" href="/admin/books/?page=1" >1</a>
+        <a class="<%= page === "2" ? 'active' : '' %>" href="/admin/books/?page=2">2</a>
+        <a class="<%= page === "3" ? 'active' : '' %>" href="/admin/books/?page=3">3</a>
+    </section>
+</main>
 <%- include('../includes/foot') %>
 <script src="/js/admin.js"></script>
